<resources>
    <string name="app_name">ShoeStore</string>
    <string name="store_name">Shoesers Inventory</string>
    <string name="email_hint">somerone@email.com</string>
    <string name="your_password">Your Password…</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create Account</string>
    <string name="welcome_text_1">Welcome to the Inventory</string>
    <string name="welcome_text_2">This app is to add new shoes Items</string>
    <string name="instructions">Instructions</string>
    <string name="instruction_1">1. Please click on the button below to go to shoes list screen</string>
    <string name="instruction_2">2. Then you will find a FAB with a plus to add new shoe to the list</string>
    <string name="instruction_3">3. You can logout using the menu up in the toolbar</string>
    <string name="shoes_list">Go to Shoes List</string>
    <string name="floating_action_button_content_description">Button to add new Items to the list</string>
    <string name="scroll_view_content_description">ScrollView to scroll the list of shoes</string>
    <string name="welcome">Welcome</string>
    <string name="inventory">Inventory</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="shoe_name_hint">adidas 4556</string>
    <string name="size_hint">42</string>
    <string name="description_hint">sport type shoe…</string>
    <string name="shoe_company_hint">Nikeee</string>
    <string name="shoe_details">Adding a shoe …</string>
    <string name="name_place_holder">Shoes Name: %1$s</string>
    <string name="company_place_holder">Shoes Company: %1$s</string>
    <string name="size_place_holder">Size: %1$.1f</string>
    <string name="description_place_holder">Description: %1$s</string>


</resources>
