<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.instructions.InstructionsFragment">

    <!-- Linear Layout because it's basic and no nesting -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16_dp"
            android:gravity="center"
            android:text="@string/instructions"
            android:textSize="33sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16_dp"
            android:layout_marginTop="@dimen/_36_dp"
            android:layout_marginEnd="@dimen/_16_dp"
            android:layout_marginBottom="@dimen/_16_dp"
            android:gravity="center"
            android:text="@string/instruction_1"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16_dp"
            android:gravity="center"
            android:text="@string/instruction_2"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16_dp"
            android:gravity="center"
            android:text="@string/instruction_3"
            android:textSize="18sp" />

            <Button
                android:id="@+id/shoeListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/_36_dp"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:text="@string/shoes_list"
                android:textSize="24sp" />

    </LinearLayout>
</layout>