<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/login_destination">

    <fragment
        android:id="@+id/login_destination"
        android:name="com.udacity.shoestore.screens.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcome_destination" />
    </fragment>
    <fragment
        android:id="@+id/welcome_destination"
        android:name="com.udacity.shoestore.screens.welcome.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcome_destination_to_instructionsFragment"
            app:destination="@id/instructions_destination" />
    </fragment>
    <fragment
        android:id="@+id/instructions_destination"
        android:name="com.udacity.shoestore.screens.instructions.InstructionsFragment"
        android:label="@string/instructions"
        tools:layout="@layout/fragment_instructions">
        <action
            android:id="@+id/action_instructions_destination_to_shoesListFragment"
            app:destination="@id/shoesList_destination" />
    </fragment>
    <fragment
        android:id="@+id/shoesList_destination"
        android:name="com.udacity.shoestore.screens.shoeslist.ShoesListFragment"
        android:label="@string/inventory"
        tools:layout="@layout/fragment_shoes_list" >
        <action
            android:id="@+id/action_shoesList_destination_to_shoeDetails"
            app:destination="@id/shoeDetails_destination" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetails_destination"
        android:name="com.udacity.shoestore.screens.shoedetails.ShoeDetails"
        android:label="@string/shoe_details"
        tools:layout="@layout/fragment_shoe_details">
        <action
            android:id="@+id/action_shoeDetails_to_shoesList_destination"
            app:destination="@id/shoesList_destination" />
    </fragment>
</navigation>